# panda

./: .gitignore  .golangci.yml  .goreleaser.yaml  CLAUDE.md  Dockerfile  Dockerfile.mcp  Dockerfile.proxy  Makefile  README.md  config-minimal.yaml  config.example.yaml  docker-compose.yaml  docker-entrypoint.sh  go.mod  go.sum  goreleaser.panda.Dockerfile  goreleaser.proxy.Dockerfile  goreleaser.server.Dockerfile  proxy-config.example.yaml
.githooks/: pre-commit
.github/workflows/: build-and-push.yaml  build-master.yaml  build-pr.yaml  ci.yml  docker.yml  eval.yaml  goreleaser.yaml
cmd/cli/: main.go
cmd/panda/: main.go
cmd/proxy/: main.go  main_test.go
cmd/server/: main.go
docs/: architecture.md  deployments.md
extensions/clickhouse/: config.go  examples.go  extension.go  resources.go
extensions/dora/: config.go  examples.go  examples.yaml  extension.go
extensions/ethnode/: config.go  examples.go  extension.go  plugin.go
extensions/loki/: config.go  extension.go
extensions/prometheus/: config.go  examples.go  extension.go
internal/github/: cache.go  cache_test.go  release.go  release_test.go
internal/githubapi/: githubapi.go
internal/version/: compare.go  compare_test.go  version.go  version_test.go
pkg/app/: app.go  (+5 more)
runbooks/: block_number_partitioned_tables.md  debug_devnet.md  debug_local_devnet.md  finality_delay.md  loader.go  registry.go  registry_test.go  slow_query.md
sandbox/: Dockerfile
sandbox/ethpandaops/: pyproject.toml
sandbox/ethpandaops/ethpandaops/: __init__.py  _runtime.py  specs.py  storage.py
scripts/: install.sh
(+412 files in other folders)
