[project]
name = "ethpandaops"
version = "0.1.0"
description = "ethpandaops data access library for MCP sandbox"
requires-python = ">=3.11"

dependencies = [
    "httpx>=0.28.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
analytics = [
    "altair>=5.4.0",
    "bokeh>=3.6.0",
    "dask>=2025.12.0",
    "fastparquet>=2025.12.0",
    "kaleido>=0.2.1",
    "matplotlib>=3.9.0",
    "networkx>=3.6.0",
    "numpy>=2.0.0",
    "plotly>=5.24.0",
    "plotnine>=0.15.0",
    "polars>=1.20.0",
    "pyarrow>=22.0.0",
    "pygwalker>=0.5.0",
    "python-dateutil>=2.9.0",
    "pytz>=2024.2",
    "rich>=13.9.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.14.0",
    "seaborn>=0.13.0",
    "statsmodels>=0.14.6",
    "tabulate>=0.9.0",
    "vl-convert-python>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ethpandaops"]
